# INTERN

./: .gitignore  LICENSE  README.md  intern.yaml  pyproject.toml
intern/: __init__.py  agent.py  cli.py  escalate.py  executor.py  planner.py  queue_runner.py  verifier.py
tickets/backlog/: EXAMPLE-001.md
tools/: generate_tickets.py  refill_backlog.sh
